make-a-wish-salesforce/src/objects/cwbtool__ProfileComparison__c.object
<CustomObject>
    <fields>
        <fullName>cwbtool__Batch_Id__c</fullName>
        <label>Batch Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Export_to_Excel__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VFC_ProfileComparisonPreviewbatch?smId=&quot;+ Id+&apos;&amp;excel=true&apos;, &quot;Export to excel&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Export to Excel</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Failed__c</fullName>
        <label>Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__IsMultiOrg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Multi Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cwbtool__Parent_Job_Failed__c</fullName>
        <label>Parent Job Failed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__SelectedProfile__c</fullName>
        <label>Selected Profile</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cwbtool__SourceOrg__c</fullName>
        <label>Source Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__TargetOrg__c</fullName>
        <label>Target Org</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__Total_Batch__c</fullName>
        <label>Total Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Total_Completed_Batch__c</fullName>
        <label>Total_Completed_Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Total_Failed_Batch__c</fullName>
        <label>Total_Failed_Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Total_Job_Item__c</fullName>
        <label>Total_Job_Item</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Total_Parent_Batch__c</fullName>
        <label>Total Parent Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__Total_Process_Batch__c</fullName>
        <label>Total_Process_Batch</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cwbtool__View_Comparison_Detail__c</fullName>
        <formula>HYPERLINK(&quot;/apex/VFC_ProfileComparisonPreviewbatch?smId=&quot;+ Id+&apos;&amp;previewonly=true&apos;, &quot;Click here to view analysis&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Comparison Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cwbtool__View_Job_Status__c</fullName>
        <formula>HYPERLINK(&quot;/apexpages/setup/listAsyncApexJobs.apexp&quot;, &quot;Click here to view Job status&quot;, &quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View Job Status</label>
        <type>Text</type>
    </fields>
    <label>Profile Comparison</label>
    <listViews>
        <fullName>cwbtool__All</fullName>
        <columns>NAME</columns>
        <columns>cwbtool__Status__c</columns>
        <columns>cwbtool__SourceOrg__c</columns>
        <columns>cwbtool__TargetOrg__c</columns>
        <columns>cwbtool__Export_to_Excel__c</columns>
        <columns>cwbtool__View_Comparison_Detail__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Profile Comparison Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Profile Comparison</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>